# Bestie-Code

./: README.md
bestie/: CMakeLists.txt  bestie.cpp  bestie.h  main.cpp  sse_benchmark.cpp  sse_benchmark.h
dianadel/: CMakeLists.txt  constrained_prf.cpp  constrained_prf.h  diana.cpp  diana.h  dianadel.cpp  dianadel.h  main.cpp  sse_benchmark.cpp  sse_benchmark.h
fides/: CMakeLists.txt  fides.cpp  fides.h  main.cpp  sophos.cpp  sophos.h  sse_benchmark.cpp  sse_benchmark.h  trapdoor_permutation.cpp  trapdoor_permutation.h
januspp_with_256bits_tag/: CMakeLists.txt  constrained_prf.cpp  constrained_prf.h  diana.cpp  diana.h  januspp.cpp  januspp.h  main.cpp  pun_encryption.cpp  pun_encryption.h  pun_prf.cpp  pun_prf.h  sse_benchmark.cpp  sse_benchmark.h
mitra/: CMakeLists.txt  main.cpp  mitra.cpp  mitra.h  sse_benchmark.cpp  sse_benchmark.h
mitraStar/: CMakeLists.txt  main.cpp  mitraStar.cpp  mitraStar.h  sse_benchmark.cpp  sse_benchmark.h
